--- a/jatin1repo.ipynb
+++ b/jatin1repo.ipynb
@@ -51,7 +51,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Untitled Notebook 2026-01-12 09_19_28",
+   "notebookName": "jatin1repo",
    "widgets": {}
   },
   "language_info": {
